# ivLyrics-helper

./: .gitignore  README.md  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
ivlyrics-helper/: package-lock.json
ivlyrics-helper/src/: index.html  main.js  styles.css
ivlyrics-helper/src-tauri/: Cargo.toml  check_output.txt  tauri.conf.json
ivlyrics-helper/src-tauri/src/: lib.rs  video_server.rs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build_output.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  config.rs  lib.rs  lyrics_server.rs  main.rs  video_server.rs  ytdlp.rs
