[package]
name = "ivlyrics-helper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ivlyrics_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# HTTP client for downloading yt-dlp
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async utilities
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# File & path utilities
dirs = "6"
zip = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Regex for parsing yt-dlp output
regex = "1"
semver = "1"
